--- a/pages/index.html
+++ b/pages/index.html
@@ -18,11 +18,13 @@
               </select>
             <input type="button" id="btnEnviar" value="Enviar" />
         </div>
+        <div>
+        </div>
         <table id="historial">
             <thead>
                 <th>ID</th>
                 <th>Petición</th>
-                <th>Fecha</th>
+                <th>Idioma</th>
             </thead>
             <tbody></tbody>
         </table>
