--- a/pages/index.html
+++ b/pages/index.html
@@ -28,5 +28,10 @@
             </thead>
             <tbody></tbody>
         </table>
+        <div id="display" style="display:none"> 
+            <input type="text" id="txtTexto" />
+            <input type="button" id="btnGuardar" value="Guardar" />
+            <input type="button" id="btnEnviar" value="Enviar" />
+        </div>
     </body>
 </html>
